--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-flask
-flask-sqlalchemy
-psycopg2
-python-dotenv
+certifi==2020.12.5
+click==8.0.0
+colorama==0.4.4
+Flask==2.0.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
+gunicorn==20.1.0
+itsdangerous==2.0.0
+Jinja2==3.0.0
+MarkupSafe==2.0.0
+psycopg2==2.8.6
+python-dotenv==0.17.1
+SQLAlchemy==1.4.15
+Werkzeug==2.0.0
+wincertstore==0.2
